  whether a page is an article or not. $wgUseCommaCount is now deprecated.
* $wgEnableDublinCoreRdf and $wgEnableCreativeCommonsRdf no longer work in core,
  and the functionality has been moved to the relevant extensions. See
  http://www.mediawiki.org/wiki/Extension:DublinCoreRdf and
  http://www.mediawiki.org/wiki/Extension:CreativeCoreRdf as appropriate

=== New features in 1.19 ===
* (bug 28916) A way to to toggle mw.config legacy globals settings from
  LocalSettings.php has been created by introducing $wgLegacyJavaScriptGlobals.
* (bug 28503) Support for ircs:// URL protocols
* (bug 26033) It is now possible to count all non-redirect pages in content
  namespaces as articles
* Images can now be embedded in an XML dump stream using backupDump.php
  --include-files and can be imported using importDump.php --uploads;
  furthermore, it can import files from the filesystem using --image-base-path
* Three new hooks in Special:Undelete, 'UndeleteForm::showHistory',
  'UndeleteForm::showRevision' and 'UndeleteForm::undelete', so that extensions
  may override the usage of PageArchive class and replace it with their own
  class that extends PageArchive.
* (bug 28915) Implement QUnit test suite for MediaWiki JavaScript.
  Also built-in support for distribution through a TestSwarm instance.
* (bug 29036) For cascade-protected pages, the mw-textarea-cprotected class is
  added to the textarea on the edit form.
* mw.util.getScript has been implemented (like wfScript in GlobalFunctions.php)
* (bug 29067) Creating "user.tokens" module (like user.options) in ResourceLoader.
* New 'Debug' hook used by wfDebug() and wfDebugLog()

=== Bug fixes in 1.19 ===
* (bug 28868) Show total pages in the subtitle of an image on the
  file description page for multi-paged documents.
* (bug 28883) Message names for different compression types commonly
  used in Tiff files.
* When translcuding a special page, do not let it interpret url parameters.